--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 # Changes for MooX::Role::POE::Emitter
 
+ * 0.11  15 Nov 2012
+
+   Added shutdown_signal() and tests for same.
+
+   Fixed syntax error in POD SYNOPSIS.
+
+   Many test cleanups/fixes.
+
  * 0.10  03 Nov 2012
  
    Expanded tests and POD.
